# chunkr

./: .dockerignore  .env.example  .gitignore  README.md  compose.cpu.yaml  compose.mac.yaml  compose.yaml
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/configs/: mod.rs
core/src/data/: schema.rs
core/src/jobs/: init.rs
core/src/models/: auth.rs  mod.rs  output.rs  pipeline.rs  task.rs  upload.rs  upload_multipart.rs
core/src/pipeline/: mod.rs
core/src/routes/: mod.rs  task.rs  tasks.rs
core/src/utils/: mod.rs
core/src/utils/jobs/: expiration.rs  mod.rs
core/src/utils/routes/: cancel_task.rs  create_task.rs  delete_task.rs  get_task.rs  get_tasks.rs  mod.rs
core/src/utils/services/: mod.rs  payload.rs
core/src/workers/: task.rs
docker/postgres/: init.sql
scripts/: pyproject.toml  task_runner.py
